# gamedev

./: .gitignore  .main.cpp.swp  .makefile.swp  .oldmakefile  BUGS  CMakeLists.txt  NOTES  README.md  main  main.cpp  makefile  tags  temp
.old/: GameModels.cpp  GameModels.hpp
Core/: CMakeLists.txt  GameModels.cpp  VertexFormat.hpp
Core/Init/: .InitGlut.cpp.swp  .InitGlut.hpp.swp  ContextInfo.hpp  DebugOutput.hpp  FrameBufferInfo.hpp  IListener.hpp  InitGlew.cpp  InitGlew.hpp  InitGlut.cpp  InitGlut.hpp  WindowInfo.hpp
Input/: .Camera.cpp.swp  .Camera.hpp.swp  CMakeLists.txt  Camera.cpp  Camera.hpp  PhysicsObject.cpp  PhysicsObject.hpp  Player.cpp  Player.hpp
Lib/: .Serializable.hpp.swp  .Serialize.hpp.swp  CMakeLists.txt  Logger.hpp  OctTree.hpp  Serialize.hpp  Tests.cpp
Managers/: .ModelManager.cpp.swp  .ModelManager.hpp.swp  .SceneManager.cpp.swp  .SceneManager.hpp.swp  .ShaderManager.cpp.swp  CMakeLists.txt  ModelManager.cpp  ModelManager.hpp  SceneManager.cpp  SceneManager.hpp  ShaderManager.cpp  ShaderManager.hpp
Rendering/: .VertexFormat.hpp.swp  CMakeLists.txt  Cube.hpp  IGameObject.hpp  Mesher.cpp  Mesher.hpp  VertexFormat.hpp
Rendering/Gui/: DGui.cpp  DGui.hpp  Gui.cpp  Gui.hpp  GuiElement.cpp  GuiElement.hpp  Text.cpp  Text.hpp  TextElement.cpp  TextElement.hpp
Rendering/Models/: .Cube.cpp.swp  .Cube.hpp.swp  .CubeCluster.cpp.swp  .CubeCluster.hpp.swp  .IndexCube.cpp.swp  .IndexCube.hpp.swp  .Model.cpp.swp  .Model.hpp.swp  .World.cpp.swp  .World.hpp.swp  Cube.cpp  Cube.hpp  CubeCluster.cpp  CubeCluster.hpp  Gui.cpp  Gui.hpp  IndexCube.cpp  IndexCube.hpp  Model.cpp  Model.hpp  Quad.cpp  Quad.hpp  ScreenGui.cpp  ScreenGui.hpp  SingleCube.cpp  SingleCube.hpp  Triangle.cpp  Triangle.hpp  World.cpp  World.hpp  temp.cpp  temp.hpp
Shaders/: .cubeclustervshader.glsl.swp  .cubevshader.glsl.swp  cubeclustervshader.glsl  cubevshader.glsl  fshader1.glsl  linevshader.glsl  simplelinevshader.glsl  uncompressedcubevshader.glsl  vshader1.glsl
WORLDDATA/: -10_-1  -10_-2  -10_-3  -10_-4  -10_-5  -10_-6  -10_-7  -10_-8  -10_-9  -10_0  -10_1  -10_2  -10_3  -10_4  -10_5  -1_-10  -1_-11  -1_-7  -1_-8  -1_-9  -1_4  -1_5  -1_6  -1_7  -2_-10  -2_-11  -2_-7  -2_-8  -2_-9  -2_4  -2_5  -2_6  -2_7  -3_-10  -3_-11  -3_-7  -3_-8  -3_-9  -3_4  -3_5  (+161 more)
core/: GameModels.cpp  GameModels.hpp  ShaderLoader.cpp  ShaderLoader.hpp
